syntax = "proto3";

package plugin;

option go_package = "github.com/NaKa2355/pirem/gen/plugin/v1";

import "apirem/v1/device_info.proto";
import "apirem/v1/device_status.proto";
import "apirem/v1/ir_info.proto";
import "google/protobuf/empty.proto";

message DeviceConfig {
    string json_config = 1;
}

message IsBusyResponse {
    bool isBusy = 1;
}

service DevicePluginService {
    rpc SendRawIr(apirem.RawIrData) returns (google.protobuf.Empty) {}
    rpc ReceiveRawIr(google.protobuf.Empty) returns (apirem.RawIrData) {}
    rpc GetDeviceInfo(google.protobuf.Empty) returns (apirem.DeviceInfo) {}
    rpc GetDeviceStatus(google.protobuf.Empty) returns (apirem.DeviceStatus) {}
    rpc IsBusy(google.protobuf.Empty) returns (IsBusyResponse) {}
    rpc Init(DeviceConfig) returns (google.protobuf.Empty) {}
}
